--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
 <body>
-<h2>Estatística Computacional</h2>
+<h2>Estatística Computacional (EC)</h2>
 
 <p align="justify">
 <ol start="0">
-<li>Contextualização da estatística computacional</li>
+<li>Contextualização da EC</li>
 <li><a href="html/otrabs.html" target="_blank">Orientações para trabalhos da disciplina</a></li>
 <li>Tipografia científica com Latex</li>
 <ul>
@@ -35,9 +35,9 @@
 <li><a href="html/snmv.html" target="_blank">Simulação de normal multivariada</a></li>
 <li>Simulação da lei dos grandes números</li>
 <li>Simulação do teorema central do limite</li>
-<li>Introdução à simulação Monte Carlo (MC)</li>
+<li>Intro à simulação Monte Carlo (MC)</li>
 <li>Integração Monte Carlo</li>
-<li>Introdução aos métodos MCMC</li>
+<li>Intro aos métodos MCMC</li>
 <li>Metaheurísticas para otimização</li>
 </ul>
 <li>Métodos numéricos com R</li>
