--- a/html/estb.html
+++ b/html/estb.html
@@ -13,23 +13,31 @@
 <p align="justify">
 <!-- comentário -->
 <ol>
-<li>Estatística descritiva</li>
+<li>Conceitos básicos</li>
 <ul>
 <li>População e amostra</li>
 <li>Variáveis numéricas e categóricas</li>
 <li>Parâmetros populacionais e estatísticas</li>
-<li>Tabelas e gráficos</li>
+<li>Dados: visão geométrica</li>
+<li>Dados: visão probabilística</li>
+<li>Intro estatística descritiva</li>
+<li>Intro estatística inferencial</li>
+</ul>
+<li>Estatística descritiva</li>
+<ul>
+<li>Tabelas</li>
+<li>Gráficos</li>
 <li>Medidas-resumo</li>
 <li>Análise bidimensional</li>
 </ul>
 <li>Estatística inferencial: introdução</li>
 <ul>
-<li>Distribuições de probabilidade</li>
+<li>Estimação e teste de hipóteses</li>
+<li>Amostragem</li>
 <li>Amostragem aleatória simples</li>
 <li>Distribuições amostrais</li>
-<li>Amostrando da distribuição normal</li>
+<li>Distribuições amostrais: população \(N(\mu,\sigma^{2})\)</li>
 <li>Distribuições amostrais: grandes amostras</li>
-<li>Estimação e teste de hipóteses</li>
 </ul>
 <li>Estatística inferencial: estimação</li>
 <ul>
@@ -37,19 +45,19 @@
 <li>Propriedades de estimadores</li>
 <li>Métodos de estimação</li>
 <li>Erro padrão de um estimador</li>
-<li>Estimação para os parâmetros da \(N(\mu,\sigma^{2})\)</li>
+<li>Estimação: população \(N(\mu,\sigma^{2})\)</li>
 <li>Estimação para \(\mu\): grandes amostras</li>
 <li>Estimação para \(p\): grandes amostras</li>
 </ul>
 <li>Estatística inferencial: testes de hipóteses</li>
 <ul>
 <li>Fundamentos</li>
-<li>Testes para os parâmetros da \(N(\mu,\sigma^{2})\)</li>
-<li>Teste para \(\mu\): grandes amostras</li>
-<li>Teste para \(p\): grandes amostras</li>
+<li>Ths: população \(N(\mu,\sigma^{2})\)</li>
+<li>Ths para \(\mu\): grandes amostras</li>
+<li>Ths para \(p\): grandes amostras</li>
 </ul>
 <li>Comparando duas populações</li>
-<li>Análise de aderência e associação</li>
+<li>Experimentos multinomiais</li>
 <li>Análise de variância com um único fator</li>
 <li>Regressão linear simples</li>
 </ol>
