--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 <li><a href="html/sna.html" target="_blank">Simulação de números aleatórios</a></li>
 <li><a href="html/svad.html" target="_blank">Simulação de va's discretas</a></li>
 <li><a href="html/svac.html" target="_blank">Simulação de va's contínuas</a></li>
-<li><a href="html/snmv.html" target="_blank">Simulação de normal multivariada</a></li>
+<li><a href="html/snmv.html" target="_blank">Simulação da normal multivariada</a></li>
 <li>Simulação da lei dos grandes números</li>
 <li>Simulação do teorema central do limite</li>
-<li>Intro à simulação Monte Carlo (MC)</li>
+<li>Intro simulação Monte Carlo (SMC)</li>
 <li>Integração Monte Carlo</li>
-<li>Intro aos métodos MCMC</li>
+<li>Intro métodos MCMC</li>
 <li>Metaheurísticas para otimização</li>
 </ul>
 <li>Métodos numéricos com R</li>
@@ -54,8 +54,8 @@
 <li>Estimação via método dos momentos</li>
 <li>Estimação via máxima verossilhança</li>
 <li>Estimação via mínimos quadrados</li>
-<li>Simulação MC para estimação</li>
-<li>Simulação MC para teste de hipóteses</li>
+<li>SMC para estimação</li>
+<li>SMC para teste de hipóteses</li>
 <li>Bootstrap</li>
 <li>Validação cruzada</li>
 <li>Métodos MCMC</li>
@@ -65,6 +65,7 @@
 <li>Regressão</li>
 <li>Classificação</li>
 </ul>
+<li>Agrupamento de dados</li>
 </ol>
 </p>
 
