--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@
 <li>Intro métodos MCMC</li>
 <li>Metaheurísticas para otimização</li>
 </ul>
-<li>Métodos numéricos com R</li>
+<li>Cálculo numéricos com R</li>
 <!-- <a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Métodos numéricos</a> -->
 <ul>
 <li>Raízes de funções reais</li>
-<li>Resolução de sistemas lineares</li>
-<li>Otimização numérica</li>
-<li>Integração numérica</li>
+<li>Solução numérica de sistemas lineares</li>
+<li>Solução numérica de sistemas não lineares</li>
 <li>Diferenciação numérica</li>
+<li>Integração numérica</li>
+<li>Otimização numérica</li>
 </ul>
 <li>Estimação, simulação e reamostragem</li>
 <ul>
