--- a/html/estb.html
+++ b/html/estb.html
@@ -30,14 +30,12 @@
 <li>Medidas-resumo</li>
 <li>Análise bidimensional</li>
 </ul>
-<li>Estatística inferencial: introdução</li>
+<li>Estatística inferencial: amostragem</li>
 <ul>
-<li>Estimação e teste de hipóteses</li>
-<li>Amostragem</li>
 <li>Amostragem aleatória simples</li>
-<li>Distribuições amostrais</li>
 <li>Distribuições amostrais: população \(N(\mu,\sigma^{2})\)</li>
 <li>Distribuições amostrais: grandes amostras</li>
+<li>Estimação e teste de hipóteses</li>
 </ul>
 <li>Estatística inferencial: estimação</li>
 <ul>
