--- a/html/estb.html
+++ b/html/estb.html
@@ -13,13 +13,12 @@
 <p align="justify">
 <!-- comentário -->
 <ol>
-<li>Conceitos básicos</li>
+<li>Conceitos básicos de estatística</li>
 <ul>
 <li>População e amostra</li>
 <li>Variáveis numéricas e categóricas</li>
 <li>Parâmetros populacionais e estatísticas</li>
-<li>Dados: visão geométrica</li>
-<li>Dados: visão probabilística</li>
+<li>Visão probabilística de dados</li>
 <li>Intro estatística descritiva</li>
 <li>Intro estatística inferencial</li>
 </ul>
@@ -29,17 +28,19 @@
 <li>Gráficos</li>
 <li>Medidas-resumo</li>
 <li>Análise bidimensional</li>
+<li>Análise multidimensional</li>
 </ul>
 <li>Estatística inferencial: amostragem</li>
 <ul>
 <li>Amostragem aleatória simples</li>
-<li>Distribuições amostrais: população \(N(\mu,\sigma^{2})\)</li>
-<li>Distribuições amostrais: grandes amostras</li>
+<li>Distribuições amostrais (DAs)</li>
+<li>DAs: população \(N(\mu,\sigma^{2})\)</li>
+<li>DAs: grandes amostras</li>
 <li>Estimação e teste de hipóteses</li>
 </ul>
 <li>Estatística inferencial: estimação</li>
 <ul>
-<li>Estimadores: \(\hat{\mu},\hat{p}\) e \(\hat{\sigma}^{2}\)</li>
+<li>Estimadores: \(\hat{\mu},\hat{p},\hat{\sigma}^{2}\) e \(S^{2}\)</li>
 <li>Propriedades de estimadores</li>
 <li>Métodos de estimação</li>
 <li>Erro padrão de um estimador</li>
@@ -47,12 +48,12 @@
 <li>Estimação para \(\mu\): grandes amostras</li>
 <li>Estimação para \(p\): grandes amostras</li>
 </ul>
-<li>Estatística inferencial: testes de hipóteses</li>
+<li>Estatística inferencial: teste de hipóteses</li>
 <ul>
-<li>Fundamentos</li>
-<li>Ths: população \(N(\mu,\sigma^{2})\)</li>
-<li>Ths para \(\mu\): grandes amostras</li>
-<li>Ths para \(p\): grandes amostras</li>
+<li>Teste de hipóteses (THs)</li>
+<li>THs: população \(N(\mu,\sigma^{2})\)</li>
+<li>THs para \(\mu\): grandes amostras</li>
+<li>THs para \(p\): grandes amostras</li>
 </ul>
 <li>Comparando duas populações</li>
 <li>Experimentos multinomiais</li>
