--- a/html/prob.html
+++ b/html/prob.html
@@ -24,17 +24,17 @@
 <li>Teorema da probabilidade total</li>
 <li>Teorema da Bayes</li>
 <li>Eventos independentes</li>
-<li>Probabilidade na reta de números reais</li>
+<li>Probabilidade em \(\mathbb{R}\)</li>
 </ul>
 <li>Variáveis aleatórias</li>
 <ul>
-<li>Variáveis aleatórias (vaas): definição</li>
+<li>Variáveis aleatórias (vaas)</li>
 <li>Função de distribuição acumulada</li>
 <li>Distribuição de uma variável aleatória</li>
 <li>Vaas discretas</li>
 <li>Vaas contínuas</li>
-<li>Vetores aleatórios (veas): definição</li>
-<li>Vetores aleatórios bidimensionais</li>
+<li>Vetores aleatórios (veas)</li>
+<li>Veas bidimensionais</li>
 <li>Veas bidimensionais discretos</li>
 <li>Veas bidimensionais contínuos</li>
 <li>Vetores aleatórios multidimensionais</li>
@@ -42,7 +42,7 @@
 <li>Funções de uma variável aleatória</li>
 <li>Funções de um vetor aleatório</li>
 </ul>
-<li>Momentos e funções geradoras de momentos</li>
+<li>Momentos</li>
 <ul>
 <li>Média e momentos</li>
 <li>Variância e desvio padrão</li>
