--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
 <li>Intro simulação Monte Carlo (SMC)</li>
 <li>Integração Monte Carlo</li>
 <li>Intro métodos MCMC</li>
-<li>Metaheurísticas para otimização</li>
 </ul>
-<li>Cálculo numéricos com R</li>
+<li>Cálculo numérico</li>
 <!-- <a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Métodos numéricos</a> -->
 <ul>
 <li>Raízes de funções reais</li>
-<li>Solução numérica de sistemas lineares</li>
-<li>Solução numérica de sistemas não lineares</li>
+<li>Soluções de sistemas lineares</li>
+<li>Soluções de sistemas não lineares</li>
 <li>Diferenciação numérica</li>
 <li>Integração numérica</li>
 <li>Otimização numérica</li>
@@ -55,14 +54,17 @@
 <li>Estimação via método dos momentos</li>
 <li>Estimação via máxima verossilhança</li>
 <li>Estimação via mínimos quadrados</li>
+<li>Estimação via metaheurísticas</li>  
 <li>SMC para estimação</li>
 <li>SMC para teste de hipóteses</li>
 <li>Bootstrap</li>
 <li>Validação cruzada</li>
 <li>Métodos MCMC</li>
 </ul>
-<li>Redes neurais artificiais</li>
+<li>Redes neurais artificiais (RNAs)</li>
 <ul>
+<li>O perceptron</li>
+<li>RNAs multicamadas</li>
 <li>Regressão</li>
 <li>Classificação</li>
 </ul>
