--- a/html/otrabs.html
+++ b/html/otrabs.html
@@ -20,9 +20,8 @@ I. Todos os trabalhos devem seguir a seguinte estrutura de organização:
 <li>Resumo</li>
 <li>1 Introdução</li>
 <li>2 Métodos (ou Referencial teórico)</li>
-<li>3 Resultados</li>
-<li>4 Discussões</li>
-<li>5 Conclusão</li>
+<li>3 Resultados e discussões</li>
+<li>4 Conclusão</li>
 <li>Referências</li>
 </ul>
 
@@ -39,8 +38,7 @@ I. Todos os trabalhos devem seguir a seguinte estrutura de organização:
 <ul>
 <li><b>1. Introdução</b>. Introduza claramente o problema abordado no trabalho, contextualizando o problema em questão e destacando sua importância. Apresente as principais referências já publicadas relacionadas ao seu problema. Apresente claramente os objetivos do trabalho e destaque também as principais contribuições do trabalho. No último parágrafo da Introdução, apresente a estrutura de seções do trabalho, informando claramente o que será discutido em cada seção.</li>
 <li><b>2. Métodos (ou Referencial teórico)</b>. Apresente o referencial teórico completo utilizado para abordar o problema do trabalho, discutindo em detalhes todos os métodos.</li>
-<li><b>3. Resultados</b>. Apresente claramente todos os resultados obtidos.</li>
-<li><b>4. Discussão</b>. Discuta todos os resultados obtidos, enfatizando as vantagens e limitações dos métodos utilizados.</li>
+<li><b>3. Resultados e discussões</b>. Apresente e discuta claramente todos os resultados obtidos, enfatizando a relevância dos achados bem como as vantagens e limitações dos métodos utilizados para obter os resultados.</li>
 <li><b>5. Conclusão</b>. Apresente as conclusões do trabalho de tal forma que as conclusões estejam em "correspondência" com os objetivos do trabalho informados na Introdução.</li>
 <li><b>Observação a respeito da estrutura das seções numeradas</b>. Não utilize abreviações nos títulos das seções. Dentro de cada seção podem existir subseções conforme a necessidade de cada trabalho. Por exemplo:</li>
 <ul>
@@ -60,8 +58,8 @@ I. Todos os trabalhos devem seguir a seguinte estrutura de organização:
 II. Sugiro que o desenvolvimento do trabalho se dê na seguinte ordem de passos: 
 </p>
 <ul>
-<li><font color="red">Passo 1:</font> Desenvolva as Seções 2, 3 e 4, incluíndo na Seção Referências todos os trabalhos que foram citados nestas seções.</li>
-<li><font color="red">Passo 2:</font> Desenvolva as Seções 5 e 1, incluíndo na Seção Referências todos os trabalhos que foram citados nestas seções.</li>
+<li><font color="red">Passo 1:</font> Desenvolva as Seções 2 e 3, incluíndo na Seção Referências todos os trabalhos que foram citados nestas seções.</li>
+<li><font color="red">Passo 2:</font> Desenvolva as Seções 4 e 1, incluíndo na Seção Referências todos os trabalhos que foram citados nestas seções.</li>
 <li><font color="red">Passo 3:</font> Revise a seção Referências. Esta seção deve conter somente a lista dos trabalhos que realmente estão citados ao longo do corpo principal do trabalho (seções 1 até 5).</li>
 <li><font color="red">Passo 4:</font> Desenvolva o Resumo.</li>
 <li><font color="red">Passo 5:</font> Ajuste o título do trabalho (se necessário) para que este de fato reflita aquilo que foi realmente desenvolvido e reportado no corpo principal do trabalho.</li>
