--- a/html/otrabs.html
+++ b/html/otrabs.html
@@ -28,7 +28,7 @@ I. Todos os trabalhos devem seguir a seguinte estrutura de organização:
 <p align="justify">
 <b>Título</b>. Não utilize abreviações.<br>
 
-<b>Autores</b>. Não utilize afiliações institucionais, mas somente os nomes dos autores do trabalho. Os autores são os únicos responsáveis pelo conteúdo do trabalho. Copiar conteúdo de outro autor (completa ou parcialmente) sem autorização e não seguir normas de citação de trabalhos acadêmicos já publicados é crime de violação aos direitos autorais.<br>
+<b>Autores</b>. Não utilize afiliações institucionais, mas somente os nomes dos autores do trabalho. Os autores são os únicos responsáveis pelo conteúdo do trabalho. Copiar (completa ou parcialmente) conteúdo de outro autor sem autorização ou tomar como referência este conteúdo mas não seguir normas de citação de trabalhos já publicados é crime de violação aos direitos autorais.<br>
 
 <b>Data</b>. Incluir a data da última versão do trabalho.<br>
 
