--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@
 <li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
 <li><a href="https://www.statmethods.net/index.html" target="_blank">Quick-R by DataCamp</a></li>
 </ul>
-<li><a href="html/prob.html" target="_blank">Probabilidade</a></li>
-<li><a href="html/estb.html" target="_blank">Estatística básica</a></li>
 <li>Simulação</li>
 <ul>
+<li><a href="html/prob.html" target="_blank">Probabilidade</a></li>  
 <li><a href="html/sna.html" target="_blank">Simulação de números aleatórios</a></li>
 <li><a href="html/svad.html" target="_blank">Simulação de va's discretas</a></li>
 <li><a href="html/svac.html" target="_blank">Simulação de va's contínuas</a></li>
 <li><a href="html/snmv.html" target="_blank">Simulação da normal multivariada</a></li>
-<li>Simulação da lei dos grandes números</li>
-<li>Simulação do teorema central do limite</li>
-<li>Intro simulação Monte Carlo (SMC)</li>
+<li>Lei dos grandes números</li>
+<li>Teorema central do limite</li>
 <li>Integração Monte Carlo</li>
+<li>Intro simulação Monte Carlo (SMC)</li>
 <li>Intro métodos MCMC</li>
 </ul>
 <li>Cálculo numérico</li>
@@ -51,8 +50,9 @@
 <li>Integração numérica</li>
 <li>Otimização numérica</li>
 </ul>
-<li>Estimação, simulação e reamostragem</li>
+<li>Bootstrap, validação cruzada e MCMC</li>
 <ul>
+<li><a href="html/estb.html" target="_blank">Estatística básica</a></li>  
 <li>Estimação via método dos momentos</li>
 <li>Estimação via máxima verossilhança</li>
 <li>Estimação via mínimos quadrados</li>
@@ -65,10 +65,10 @@
 </ul>
 <li>Redes neurais artificiais (RNAs)</li>
 <ul>
-<li>O perceptron</li>
+<li>Perceptron</li>
 <li>RNAs multicamadas</li>
-<li>Regressão</li>
-<li>Classificação</li>
+<li>RNAs para regressão</li>
+<li>RNAs para classificação</li>
 </ul>
 <li>Agrupamento de dados</li>
 </ol>
