--- a/html/estb.html
+++ b/html/estb.html
@@ -19,10 +19,9 @@
 <li>Variáveis numéricas e categóricas</li>
 <li>Parâmetros populacionais e estatísticas</li>
 <li>Visão probabilística de dados</li>
-<li>Intro estatística descritiva</li>
-<li>Intro estatística inferencial</li>
+<li>Intro estimação e teste de hipóteses</li>  
 </ul>
-<li>Estatística descritiva</li>
+<li>Resumo e visualização de dados</li>
 <ul>
 <li>Tabelas</li>
 <li>Gráficos</li>
@@ -30,30 +29,29 @@
 <li>Análise bidimensional</li>
 <li>Análise multidimensional</li>
 </ul>
-<li>Estatística inferencial: amostragem</li>
+<li>Distribuições amostrais</li>
 <ul>
 <li>Amostragem aleatória simples</li>
 <li>Distribuições amostrais (DAs)</li>
-<li>DAs: população \(N(\mu,\sigma^{2})\)</li>
 <li>DAs: grandes amostras</li>
-<li>Estimação e teste de hipóteses</li>
+<li>DAs: população \(N(\mu,\sigma^{2})\)</li>
 </ul>
-<li>Estatística inferencial: estimação</li>
+<li>Estimação</li>
 <ul>
-<li>Estimadores: \(\hat{\mu},\hat{p},\hat{\sigma}^{2}\) e \(S^{2}\)</li>
+<li>Estimadores</li>
 <li>Propriedades de estimadores</li>
 <li>Métodos de estimação</li>
 <li>Erro padrão de um estimador</li>
-<li>Estimação: população \(N(\mu,\sigma^{2})\)</li>
 <li>Estimação para \(\mu\): grandes amostras</li>
 <li>Estimação para \(p\): grandes amostras</li>
+<li>Estimação: população \(N(\mu,\sigma^{2})\)</li>  
 </ul>
-<li>Estatística inferencial: teste de hipóteses</li>
+<li>Teste de hipóteses</li>
 <ul>
 <li>Teste de hipóteses (THs)</li>
-<li>THs: população \(N(\mu,\sigma^{2})\)</li>
 <li>THs para \(\mu\): grandes amostras</li>
 <li>THs para \(p\): grandes amostras</li>
+<li>THs: população \(N(\mu,\sigma^{2})\)</li>  
 </ul>
 <li>Comparando duas populações</li>
 <li>Experimentos multinomiais</li>
