--- a/html/prob.html
+++ b/html/prob.html
@@ -28,13 +28,12 @@
 </ul>
 <li>Variáveis aleatórias</li>
 <ul>
-<li>Variáveis aleatórias (vaas)</li>
+<li>Variáveis aleatórias (Vaas)</li>
 <li>Função de distribuição acumulada</li>
 <li>Distribuição de uma variável aleatória</li>
 <li>Vaas discretas</li>
 <li>Vaas contínuas</li>
-<li>Vetores aleatórios (veas)</li>
-<li>Veas bidimensionais</li>
+<li>Vetores aleatórios (Veas) bidimensionais</li>
 <li>Veas bidimensionais discretos</li>
 <li>Veas bidimensionais contínuos</li>
 <li>Vetores aleatórios multidimensionais</li>
