--- a/index.html
+++ b/index.html
@@ -8,75 +8,56 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
 <body>
-<h2>Estatística Computacional (EC)</h2>
-
+<h2>Probabilidade e Estatística</h2>
+<!-- <a href="xxx" target="_blank">Comentário</a> -->
 <p align="justify">
 <ol start="0">
-<li>Contextualização da EC</li>
-<li><a href="html/otrabs.html" target="_blank">Orientações para trabalhos da disciplina</a></li>
-<li>Tipografia científica com Latex</li>
-<ul>
-<li><a href="https://en.wikibooks.org/wiki/LaTeX" target="_blank">Latex/Geral</a></li>
+<li><a href="https://en.wikibooks.org/wiki/LaTeX" target="_blank">Latex</a></li>
 <li><a href="pdf/ec.pdf" target="_blank">Latex/Template | PDF</a></li>
 <li><a href="pdf/ectxt.pdf" target="_blank">Latex/Template | TEX</a></li>
-</ul>
-<li>Introdução ao R</li>
-<ul>
-<li><a href="html/intror.html" target="_blank">IntroR</a></li>
+<li><a href="html/otrabs.html" target="_blank">Orientações para trabalhos</a></li>
+<li><a href="html/intror.html" target="_blank">R: intro</a></li>
 <li><a href="pdf/csbaseR.pdf" target="_blank">Base R cheat sheet</a></li>
 <li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
 <li><a href="https://www.statmethods.net/index.html" target="_blank">Quick-R by DataCamp</a></li>
-</ul>
-<li>Simulação</li>
-<ul>
-<li><a href="html/prob.html" target="_blank">Probabilidade</a></li>  
+<li><a href="https://www.tutorialspoint.com/r/index.htm" target="_blank">R Tutorial</a></li>  
+<li><a href="html/edR.html" target="_blank">Estatística descritiva</a></li>  
+<li><a href="html/prob.html" target="_blank">Probabilidade e simulação</a></li>  
+<li>Lei dos grandes números</li>
+<li>Teorema central do limite</li>
 <li><a href="html/sna.html" target="_blank">Simulação de números aleatórios</a></li>
 <li><a href="html/svad.html" target="_blank">Simulação de va's discretas</a></li>
 <li><a href="html/svac.html" target="_blank">Simulação de va's contínuas</a></li>
 <li><a href="html/snmv.html" target="_blank">Simulação da normal multivariada</a></li>
-<li>Lei dos grandes números</li>
-<li>Teorema central do limite</li>
-<li>Integração Monte Carlo</li>
-<li>Intro simulação Monte Carlo (SMC)</li>
-<li>Intro métodos MCMC</li>
-</ul>
-<li>Cálculo numérico</li>
-<!-- <a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Métodos numéricos</a> -->
-<ul>
+<li>Método de Monte Carlo (MMC): intro</li>
+<li><a href="html/estb.html" target="_blank">Estatística básica</a></li>  
+<li>Estimação</li>
+<li>Teste de hipóteses I</li>
+<li>Teste de hipóteses II</li>
+<li>MMC para estimação</li>
+<li>MMC para teste de hipóteses</li>
+<li>Bootstrap</li>
+<li>Validação cruzada</li>
+<li>Métodos MCMC</li>
+<li>Redes neurais artificiais (RNAs)</li>
+<li>Perceptron</li>
+<li>RNAs multicamadas</li>
+<li>RNAs para regressão</li>
+<li>RNAs para classificação</li>
+<li>Agrupamento de dados</li>
 <li>Raízes de funções reais</li>
 <li>Soluções de sistemas lineares</li>
 <li>Soluções de sistemas não lineares</li>
 <li>Diferenciação numérica</li>
 <li>Integração numérica</li>
 <li>Otimização numérica</li>
-</ul>
-<li>Bootstrap, validação cruzada e MCMC</li>
-<ul>
-<li><a href="html/estb.html" target="_blank">Estatística básica</a></li>  
-<li>Estimação via método dos momentos</li>
-<li>Estimação via máxima verossilhança</li>
-<li>Estimação via mínimos quadrados</li>
-<li>Estimação via metaheurísticas</li>  
-<li>SMC para estimação</li>
-<li>SMC para teste de hipóteses</li>
-<li>Bootstrap</li>
-<li>Validação cruzada</li>
-<li>Métodos MCMC</li>
-</ul>
-<li>Redes neurais artificiais (RNAs)</li>
-<ul>
-<li>Perceptron</li>
-<li>RNAs multicamadas</li>
-<li>RNAs para regressão</li>
-<li>RNAs para classificação</li>
-</ul>
-<li>Agrupamento de dados</li>
 </ol>
 </p>
 
-<h2 id="B">Referências</h2>
+<h2 id="B">Outras referências</h2>
 <p align="justify">
 <ul>
+<li><a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>
 <li><a href="https://miktex.org/" target="_blank">MiKTeX</a></li>
 <li><a href="https://www.xm1math.net/texmaker/" target="_blank">TeXMaker</a></li>
 <li><a href="https://en.wikibooks.org/wiki/LaTeX/Mathematics" target="_blank">Latex/Matemática | parte I</a></li>
