--- a/index.html
+++ b/index.html
@@ -8,10 +8,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
 <body>
-<h2>Probabilidade e Estatística</h2>
-<!-- <a href="xxx" target="_blank">Comentário</a> -->
+
+<h3 id="A">Disciplinas</h3>
 <p align="justify">
-<ol start="0">
+<ul>
+<li>Estatística básica</li>
+<li>Probabilidade e estatística</li>
+<li>Estatística computacional</li>
+</ul>
+</p>
+
+<!-- Comentário -->
+
+<h3 id="B">Temas</h3>
+<p align="justify">
+<ol start="1">
 <li><a href="https://en.wikibooks.org/wiki/LaTeX" target="_blank">Latex</a></li>
 <li><a href="pdf/ec.pdf" target="_blank">Latex/Template | PDF</a></li>
 <li><a href="pdf/ectxt.pdf" target="_blank">Latex/Template | TEX</a></li>
@@ -21,26 +32,31 @@
 <li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
 <li><a href="https://www.statmethods.net/index.html" target="_blank">Quick-R by DataCamp</a></li>
 <li><a href="https://www.tutorialspoint.com/r/index.htm" target="_blank">R Tutorial</a></li>  
-<li><a href="html/edR.html" target="_blank">Estatística descritiva</a></li>  
-<li><a href="html/prob.html" target="_blank">Probabilidade e simulação</a></li>  
-<li>Lei dos grandes números</li>
-<li>Teorema central do limite</li>
+<li>Estatística descritiva</li>  
+<li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>  
+<li><a href="html/prob.html" target="_blank">Probabilidade</a></li>  
 <li><a href="html/sna.html" target="_blank">Simulação de números aleatórios</a></li>
 <li><a href="html/svad.html" target="_blank">Simulação de va's discretas</a></li>
 <li><a href="html/svac.html" target="_blank">Simulação de va's contínuas</a></li>
 <li><a href="html/snmv.html" target="_blank">Simulação da normal multivariada</a></li>
+<li>Lei dos grandes números</li>
+<li>Teorema central do limite</li>
 <li>Método de Monte Carlo (MMC): intro</li>
-<li><a href="html/estb.html" target="_blank">Estatística básica</a></li>  
+<li>O processo de Bernoulli</li>
+<li>O processo de Poisson</li>
+<li>Cadeias de Markov: intro</li>
+<li><a href="html/estb.html" target="_blank">Estatística inferencial</a></li>  
 <li>Estimação</li>
-<li>Teste de hipóteses I</li>
-<li>Teste de hipóteses II</li>
+<li><a href="html/th1R.html" target="_blank">Teste de hipóteses com R</a> (I)</li>
+<li>Teste de hipóteses com R (II)</li>
+<li>Teste de hipóteses com R (III)</li>
 <li>MMC para estimação</li>
 <li>MMC para teste de hipóteses</li>
 <li>Bootstrap</li>
 <li>Validação cruzada</li>
 <li>Métodos MCMC</li>
 <li>Redes neurais artificiais (RNAs)</li>
-<li>Perceptron</li>
+<li>O perceptron</li>
 <li>RNAs multicamadas</li>
 <li>RNAs para regressão</li>
 <li>RNAs para classificação</li>
@@ -54,10 +70,9 @@
 </ol>
 </p>
 
-<h2 id="B">Outras referências</h2>
+<h3 id="C">Outros links</h3>
 <p align="justify">
 <ul>
-<li><a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>
 <li><a href="https://miktex.org/" target="_blank">MiKTeX</a></li>
 <li><a href="https://www.xm1math.net/texmaker/" target="_blank">TeXMaker</a></li>
 <li><a href="https://en.wikibooks.org/wiki/LaTeX/Mathematics" target="_blank">Latex/Matemática | parte I</a></li>
@@ -66,6 +81,7 @@
 <li><a href="http://merkel.texture.rocks/Latex/natbib.php" target="_blank">Latex/natbib</a></li>
 <li><a href="https://www.r-project.org/" target="_blank">The R Project</a></li>
 <li><a href="https://rstudio.com/" target="_blank">RStudio</a></li>
+<li><a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>
 </ul>
 </p>
 
