--- a/index.html
+++ b/index.html
@@ -46,10 +46,14 @@
 <li>O processo de Poisson</li>
 <li>Cadeias de Markov: intro</li>
 <li><a href="html/estb.html" target="_blank">Estatística inferencial</a></li>  
-<li>Estimação</li>
+<li>Estimação com R</li>
 <li><a href="html/th1R.html" target="_blank">Teste de hipóteses com R</a> (I)</li>
 <li>Teste de hipóteses com R (II)</li>
 <li>Teste de hipóteses com R (III)</li>
+<li>ANOVA com 1 fator</li>
+<li>Correlação linear de Pearson</li>
+<li>Regressão linear simples</li>
+<li>Regressão linear múltipla</li>
 <li>MMC para estimação</li>
 <li>MMC para teste de hipóteses</li>
 <li>Bootstrap</li>
