--- a/html/estb.html
+++ b/html/estb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Estatística Básica</title>
+<title>Estatística Inferencial</title>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
@@ -9,23 +9,23 @@
 
 <body>
 
-<h2 id="E">Estatística Básica</h2>
+<h2 id="E">Estatística Inferencial</h2>
 <p align="justify">
 <!-- comentário -->
 <ol>
 <li>Conceitos básicos de estatística</li>
 <ul>
 <li>População e amostra</li>
-<li>Variáveis numéricas e categóricas</li>
-<li>Parâmetros populacionais e estatísticas</li>
-<li>Visão probabilística de dados</li>
-<li>Intro estimação e teste de hipóteses</li>  
+<li>Variáveis</li>
+<li>Parâmetros populacionais</li>
+<li>Estatísticas</li>  
+<li>Visão probabilística de dados</li> 
 </ul>
 <li>Resumo e visualização de dados</li>
 <ul>
 <li>Tabelas</li>
 <li>Gráficos</li>
-<li>Medidas-resumo</li>
+<li>Resumo numérico</li>
 <li>Análise bidimensional</li>
 <li>Análise multidimensional</li>
 </ul>
@@ -46,25 +46,19 @@
 <li>Estimação para \(\mu\): grandes amostras</li>
 <li>Estimação para \(p\): grandes amostras</li>  
 </ul>
-<li>Teste de hipóteses</li>
-<ul>
 <li>Teste de hipóteses (THs)</li>
+<ul>
+<li>Fundamentos</li>
 <li>THs: população \(N(\mu,\sigma^{2})\)</li>  
 <li>THs para \(\mu\): grandes amostras</li>
 <li>THs para \(p\): grandes amostras</li>  
 </ul>
 <li>Comparando duas populações</li>
-<li>Experimentos multinomiais</li>
-<li>Análise de variância com um único fator</li>
+<li>Testes qui-quadrado</li>
+<li>ANOVA com um único fator</li>
 <li>Regressão linear simples</li>
+<li>Regressão linear múltipla</li>  
 </ol>
-</p>
-
-<p align="justify">
-<ul>
-<li><a href="http://cursos.leg.ufpr.br/ecr/index.html" target="_blank">Estatística Computacional UFPR</a></li>
-<li><a href="https://www.statmethods.net/stats/index.html" target="_blank">Quick-R</a></li>
-</ul>
 </p>
 
 </body>
