--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
 <li><a href="https://www.statmethods.net/index.html" target="_blank">Quick-R by DataCamp</a></li>
 <li><a href="https://www.tutorialspoint.com/r/index.htm" target="_blank">R Tutorial</a></li>  
-<li>Estatística descritiva</li>  
+<li><a href="html/ed.html" target="_blank">Estatística descritiva</a></li>  
 <li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>  
 <li><a href="html/prob.html" target="_blank">Probabilidade</a></li>  
 <li><a href="html/sna.html" target="_blank">Simulação de números aleatórios</a></li>
