--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
 <li><a href="https://www.statmethods.net/index.html" target="_blank">Quick-R by DataCamp</a></li>
 <li><a href="https://www.tutorialspoint.com/r/index.htm" target="_blank">R Tutorial</a></li>  
-<li>&diams; <a href="html/ed.html" target="_blank">Estatística descritiva</a></li>  
+<li> >> <a href="html/ed.html" target="_blank">Estatística descritiva</a></li>  
 <li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>  
-<li>&diams; <a href="html/prob.html" target="_blank">Probabilidade</a></li>  
+<li> >> <a href="html/prob.html" target="_blank">Probabilidade</a></li>  
 <li><a href="html/sna.html" target="_blank">Simulação de números aleatórios</a></li>
 <li><a href="html/svad.html" target="_blank">Simulação de va's discretas</a></li>
 <li><a href="html/svac.html" target="_blank">Simulação de va's contínuas</a></li>
@@ -45,7 +45,7 @@
 <li>O processo de Bernoulli</li>
 <li>O processo de Poisson</li>
 <li>Cadeias de Markov: intro</li>
-<li>&diams; <a href="html/estb.html" target="_blank">Estatística inferencial</a></li>  
+<li> >> <a href="html/estb.html" target="_blank">Estatística inferencial</a></li>  
 <li>Estimação com R</li>
 <li><a href="html/th1R.html" target="_blank">Teste de hipóteses com R</a> (I)</li>
 <li>Teste de hipóteses com R (II)</li>
