--- a/html/estb.html
+++ b/html/estb.html
@@ -43,8 +43,8 @@
 <li>Métodos de estimação</li>
 <li>Erro padrão de um estimador</li>
 <li>Estimação: população \(N(\mu,\sigma^{2})\)</li>  
-<li>Estimação para \(\mu\): grandes amostras</li>
-<li>Estimação para \(p\): grandes amostras</li>  
+<li>Estimação de \(\mu\): grandes amostras</li>
+<li>Estimação de \(p\): grandes amostras</li>  
 </ul>
 <li>Teste de hipóteses (THs)</li>
 <ul>
