--- a/html/prob.html
+++ b/html/prob.html
@@ -26,20 +26,23 @@
 <li>Eventos independentes</li>
 <li>Probabilidade em \(\mathbb{R}\)</li>
 </ul>
-<li>Variáveis aleatórias</li>
-<ul>
 <li>Variáveis aleatórias (Vaas)</li>
+<ul>
+<li>Definição</li>
 <li>Função de distribuição acumulada</li>
-<li>Distribuição de uma variável aleatória</li>
+<li>Distribuição de uma vaa</li>
 <li>Vaas discretas</li>
 <li>Vaas contínuas</li>
-<li>Funções de uma variável aleatória</li>  
-<li>Vetores aleatórios (Veas) bidimensionais</li>
+<li>Funções de uma vaa</li>  
+</ul>
+<li>Vetores aleatórios (Veas)</li>
+<ul>
+<li>Veas bidimensionais: definição</li>
 <li>Veas bidimensionais discretos</li>
 <li>Veas bidimensionais contínuos</li>
 <li>Vetores aleatórios multidimensionais</li>
 <li>Variáveis aleatórias independentes</li>
-<li>Funções de um vetor aleatório</li>
+<li>Funções de um vea</li>
 </ul>
 <li>Momentos</li>
 <ul>
@@ -56,14 +59,6 @@
 <li>Teorema central do limite</li>
 </ul>
 </ol>
-</p>
-
-<p align="justify">
-<ul>
-<li><a href="https://www.vfu.bg/en/e-Learning/Math--Bertsekas_Tsitsiklis_Introduction_to_probability.pdf" target="_blank">
-Ebook</a>: Bertsekas and Tsitsiklis (2000)</li>
-<li><a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm" target="_blank">MIT OPEN COURSEWARE</a></li>
-</ul>
 </p>
 
 </body>
