--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
 <li><a href="https://www.r-project.org/" target="_blank">The R Project</a></li>
 <li><a href="https://rstudio.com/" target="_blank">RStudio</a></li>
 <li><a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>
+<li><a href="https://www.vfu.bg/en/e-Learning/Math--Bertsekas_Tsitsiklis_Introduction_to_probability.pdf" target="_blank">EBook</a></li>
+<li><a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm" target="_blank">MIT</a></li>
 </ul>
 </p>
 
