--- a/html/otrabs.html
+++ b/html/otrabs.html
@@ -15,7 +15,7 @@ I. Todos os trabalhos devem seguir a seguinte estrutura de organização:
 </p>
 <ul>
 <li>Título</li>
-<li>Autores</li>
+<li>Nome do autor</li>
 <li>Data</li>
 <li>Resumo</li>
 <li>1 Introdução</li>
@@ -28,7 +28,10 @@ I. Todos os trabalhos devem seguir a seguinte estrutura de organização:
 <p align="justify">
 <b>Título</b>. Não utilize abreviações.<br>
 
-<b>Autores</b>. Não utilize afiliações institucionais, mas somente os nomes dos autores do trabalho. Os autores são os únicos responsáveis pelo conteúdo do trabalho. Copiar (completa ou parcialmente) conteúdo de outro autor sem autorização ou tomar como referência este conteúdo mas não seguir normas de citação de trabalhos já publicados é crime de violação aos direitos autorais.<br>
+<b>Nome do autor</b>. Não utilize nenhuma afiliação institucional, mas somente o nome do autor do trabalho. 
+  O autor é o único responsável pelo conteúdo do trabalho. Copiar completa ou parcialmente conteúdo de outro 
+  autor sem dar os devidos créditos ou sem autorização prévia é crime de violação aos direitos autorais. 
+  Utilize sempre as normas de citação de trabalhos já publicados.<br>
 
 <b>Data</b>. Incluir a data da última versão do trabalho.<br>
 
@@ -36,11 +39,21 @@ I. Todos os trabalhos devem seguir a seguinte estrutura de organização:
 
 <b>Seções numeradas</b>. 
 <ul>
-<li><b>1. Introdução</b>. Introduza claramente o problema abordado no trabalho, contextualizando o problema em questão e destacando sua importância. Apresente as principais referências já publicadas relacionadas ao seu problema. Apresente claramente os objetivos do trabalho e destaque também as principais contribuições do trabalho. No último parágrafo da Introdução, apresente a estrutura de seções do trabalho, informando claramente o que será discutido em cada seção.</li>
-<li><b>2. Métodos (ou Referencial teórico)</b>. Apresente o referencial teórico completo utilizado para abordar o problema do trabalho, discutindo em detalhes todos os métodos.</li>
-<li><b>3. Resultados e discussões</b>. Apresente e discuta claramente todos os resultados obtidos, enfatizando a relevância relativa de cada achado bem como as vantagens e limitações dos métodos que foram utilizados para obter cada resultado.</li>
-<li><b>4. Conclusão</b>. Apresente as conclusões do trabalho de tal forma que as conclusões estejam em "correspondência" com os objetivos do trabalho informados na Introdução.</li>
-<li><b>Observação a respeito da estrutura das seções numeradas</b>. Não utilize abreviações nos títulos das seções. Dentro de cada seção podem existir subseções conforme a necessidade de cada trabalho. Por exemplo:</li>
+<li><b>1. Introdução</b>. Introduza claramente o problema abordado no trabalho, contextualizando o problema 
+  em questão e destacando sua importância. Apresente as principais referências já publicadas relacionadas ao 
+  problema. Apresente também os objetivos do seu trabalho, destacando suas contribuições. No último parágrafo 
+  da Introdução, apresente a estrutura de seções do trabalho, informando claramente o que será discutido em 
+  cada seção que segue.</li>
+<li><b>2. Métodos (ou Referencial teórico)</b>. Apresente o referencial teórico completo utilizado para abordar 
+  o problema do trabalho, discutindo resumidamente todos os métodos utilizados. Proporcione aos leitores do seu
+  trabalho boas referências métodos utilizados, caso estes desejem uma exposição mais detalhada</li>
+<li><b>3. Resultados e discussões</b>. Apresente e discuta claramente todos os resultados obtidos, enfatizando 
+  a relevância relativa de cada achado. Discuta as vantagens e limitações dos métodos utilizados para obter cada 
+  resultado.</li>
+<li><b>4. Conclusão</b>. Apresente as conclusões do trabalho de tal forma que as conclusões estejam em 
+  "correspondência" com os objetivos do seu trabalho, que foram informados na Introdução.</li>
+<li><b>Observação a respeito da estrutura das seções numeradas</b>. Não utilize abreviações nos títulos das seções. 
+  Dentro de cada seção podem existir subseções conforme a necessidade de cada trabalho. Por exemplo:</li>
 <ul>
 <li>2. Referencial teórico</li>
 <ul>
@@ -60,10 +73,13 @@ II. Sugiro que o desenvolvimento do trabalho se dê na seguinte ordem de passos:
 <ul>
 <li><font color="red">Passo 1:</font> Desenvolva as Seções 2 e 3, incluíndo na Seção Referências todos os trabalhos que foram citados nestas seções.</li>
 <li><font color="red">Passo 2:</font> Desenvolva as Seções 4 e 1, incluíndo na Seção Referências todos os trabalhos que foram citados nestas seções.</li>
-<li><font color="red">Passo 3:</font> Revise a seção Referências. Esta seção deve conter somente a lista dos trabalhos que realmente estão citados ao longo do corpo principal do trabalho (seções 1 até 4).</li>
+<li><font color="red">Passo 3:</font> Revise a seção Referências. Esta seção deve conter somente a lista dos trabalhos que realmente estão citados ao 
+  longo do corpo principal do trabalho (seções 1 até 4).</li>
 <li><font color="red">Passo 4:</font> Desenvolva o Resumo.</li>
-<li><font color="red">Passo 5:</font> Ajuste o título do trabalho (se necessário) para que este de fato reflita aquilo que foi realmente desenvolvido e reportado no corpo principal do trabalho.</li>
-<li><font color="red">Passo 6:</font> Por fim, realize uma leitura geral do trabalho (ou seja, uma revisão final) e faça os ajustes que ainda forem necessários.</li>
+<li><font color="red">Passo 5:</font> Ajuste o título do trabalho (se necessário) para que este de fato reflita aquilo que foi realmente desenvolvido e 
+  reportado no corpo principal do trabalho.</li>
+<li><font color="red">Passo 6:</font> Por fim, realize uma leitura geral do trabalho (ou seja, uma revisão final) e faça os ajustes que ainda forem 
+  necessários.</li>
 </ul>
 
 </body>
