--- a/html/otrabs.html
+++ b/html/otrabs.html
@@ -46,7 +46,7 @@ I. Todos os trabalhos devem seguir a seguinte estrutura de organização:
   cada seção que segue.</li>
 <li><b>2. Métodos (ou Referencial teórico)</b>. Apresente o referencial teórico completo utilizado para abordar 
   o problema do trabalho, discutindo resumidamente todos os métodos utilizados. Proporcione aos leitores do seu
-  trabalho boas referências métodos utilizados, caso estes desejem uma exposição mais detalhada</li>
+  trabalho boas referências para os métodos utilizados, caso estes desejem uma exposição mais detalhada</li>
 <li><b>3. Resultados e discussões</b>. Apresente e discuta claramente todos os resultados obtidos, enfatizando 
   a relevância relativa de cada achado. Discuta as vantagens e limitações dos métodos utilizados para obter cada 
   resultado.</li>
@@ -61,10 +61,14 @@ I. Todos os trabalhos devem seguir a seguinte estrutura de organização:
 <li>2.2 Título da subseção</li>
 <li>...</li>
 </ul>
-<li>Não utilize subsubseção, subsubsubseção, etc.... apenas as seções indicadas e, para cada seção, subções conforme a necessidade de cada trabalho.</li>
+<li>Não utilize subsubseção, subsubsubseção, etc.... apenas as seções indicadas e, para cada seção, subções 
+  conforme a necessidade de cada trabalho.</li>
 </ul>
 </ul>
-<b>Referências</b>. Item obrigatório. Esta seção é não-numerada. Atenção especial para a forma correta de citação de trabalhos publicados no texto das seções e o sistema de chamadas empregado conforme a lista de trabalhos consultados que deve ser informada nas Referências. Os autores decidem pelo sistema de chamadas que preferem utilizar dentre uma das seguintes duas opções: <font color="red">sistema autor-data ou sistema numérico</font>.
+<b>Referências</b>. Item obrigatório. Esta seção é não-numerada. Atenção especial para a forma correta de 
+  citação de trabalhos publicados no texto das seções e o sistema de chamadas empregado conforme a lista de 
+  trabalhos consultados que deve ser informada nas Referências. O autor decide pelo sistema de chamadas que 
+  preferem utilizar, dentre uma das seguintes duas opções: <font color="red">sistema autor-data ou sistema numérico</font>.
 </p>
 
 <p align="justify">
