--- a/html/otrabs.html
+++ b/html/otrabs.html
@@ -39,13 +39,13 @@ I. Todos os trabalhos devem seguir a seguinte estrutura de organização:
 
 <b>Seções numeradas</b>. 
 <ul>
-<li><b>1. Introdução</b>. Introduza claramente o problema abordado no trabalho, contextualizando o problema 
+<li><b>1. Introdução</b>. Introduza claramente o problema abordado no seu trabalho, contextualizando o problema 
   em questão e destacando sua importância. Apresente as principais referências já publicadas relacionadas ao 
   problema. Apresente também os objetivos do seu trabalho, destacando suas contribuições. No último parágrafo 
-  da Introdução, apresente a estrutura de seções do trabalho, informando claramente o que será discutido em 
+  da Introdução, apresente a estrutura de seções do seu trabalho, informando claramente o que será discutido em 
   cada seção que segue.</li>
 <li><b>2. Métodos (ou Referencial teórico)</b>. Apresente o referencial teórico completo utilizado para abordar 
-  o problema do trabalho, discutindo resumidamente todos os métodos utilizados. Proporcione aos leitores do seu
+  o problema do seu trabalho, discutindo resumidamente todos os métodos utilizados. Proporcione aos leitores do seu
   trabalho boas referências para os métodos utilizados, caso estes desejem uma exposição mais detalhada</li>
 <li><b>3. Resultados e discussões</b>. Apresente e discuta claramente todos os resultados obtidos, enfatizando 
   a relevância relativa de cada achado. Discuta as vantagens e limitações dos métodos utilizados para obter cada 
@@ -68,7 +68,7 @@ I. Todos os trabalhos devem seguir a seguinte estrutura de organização:
 <b>Referências</b>. Item obrigatório. Esta seção é não-numerada. Atenção especial para a forma correta de 
   citação de trabalhos publicados no texto das seções e o sistema de chamadas empregado conforme a lista de 
   trabalhos consultados que deve ser informada nas Referências. O autor decide pelo sistema de chamadas que 
-  preferem utilizar, dentre uma das seguintes duas opções: <font color="red">sistema autor-data ou sistema numérico</font>.
+  prefere utilizar, escolhendo uma dentre as seguintes duas opções: <font color="red">sistema autor-data ou sistema numérico</font>.
 </p>
 
 <p align="justify">
