--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
 <body>
 
-<h3 id="A">Disciplinas</h3>
+<h3>Disciplinas</h3>
 <p align="justify">
 <ul>
-<li>Estatística básica</li>
 <li>Probabilidade e estatística</li>
 <li>Estatística computacional</li>
 </ul>
@@ -20,20 +19,10 @@
 
 <!-- Comentário -->
 
-<h3 id="B">Temas</h3>
+<h3>Tópicos</h3>
+<h4>Probabilidade e simulação</h4>
 <p align="justify">
-<ol start="1">
-<li><a href="https://en.wikibooks.org/wiki/LaTeX" target="_blank">Latex</a></li>
-<li><a href="pdf/ec.pdf" target="_blank">Latex/Template | PDF</a></li>
-<li><a href="pdf/ectxt.pdf" target="_blank">Latex/Template | TEX</a></li>
-<li><a href="html/otrabs.html" target="_blank">Orientações para trabalhos</a></li>
-<li><a href="html/intror.html" target="_blank">R: intro</a></li>
-<li><a href="pdf/csbaseR.pdf" target="_blank">Base R cheat sheet</a></li>
-<li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
-<li><a href="https://www.statmethods.net/index.html" target="_blank">Quick-R by DataCamp</a></li>
-<li><a href="https://www.tutorialspoint.com/r/index.htm" target="_blank">R Tutorial</a></li>  
-<li><font color="red">&bull;</font> <a href="html/ed.html" target="_blank">Estatística descritiva</a></li>  
-<li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>  
+<ul>
 <li><font color="red">&bull;</font> <a href="html/prob.html" target="_blank">Probabilidade</a></li>  
 <li>Lei dos grandes números</li>
 <li>Teorema central do limite</li>
@@ -41,10 +30,30 @@
 <li><a href="html/svad.html" target="_blank">Simulação de va's discretas</a></li>
 <li><a href="html/svac.html" target="_blank">Simulação de va's contínuas</a></li>
 <li><a href="html/snmv.html" target="_blank">Simulação da normal multivariada</a></li>
-<li>Método de Monte Carlo (MMC): intro</li>
 <li>O processo de Bernoulli</li>
 <li>O processo de Poisson</li>
-<li>Cadeias de Markov: intro</li>
+<li>Cadeias de Markov</li>
+<li><a href="https://www.vfu.bg/en/e-Learning/Math--Bertsekas_Tsitsiklis_Introduction_to_probability.pdf" target="_blank">EBook</a></li>
+<li><a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm" target="_blank">MIT</a></li>
+</ul>
+</p>
+
+<h4>Estatística descritiva e R</h4>
+<p align="justify">
+<ul>
+<li><font color="red">&bull;</font> <a href="html/ed.html" target="_blank">Estatística descritiva</a></li>
+<li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
+<li><a href="pdf/csbaseR.pdf" target="_blank">Base R cheat sheet</a></li>
+<li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
+<li><a href="https://www.statmethods.net/index.html" target="_blank">Quick-R by DataCamp</a></li>
+<li><a href="https://www.tutorialspoint.com/r/index.htm" target="_blank">R Tutorial</a></li>  
+<li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>
+</ul>
+</p>
+
+<h4>Estatística inferencial</h4>
+<p align="justify">
+<ul>
 <li><font color="red">&bull;</font> <a href="html/estb.html" target="_blank">Estatística inferencial</a></li>  
 <li>Estimação com R</li>
 <li><a href="html/th1R.html" target="_blank">Teste de hipóteses com R</a> (I)</li>
@@ -54,41 +63,54 @@
 <li>Correlação linear de Pearson</li>
 <li>Regressão linear simples</li>
 <li>Regressão linear múltipla</li>
-<li>MMC para estimação</li>
-<li>MMC para teste de hipóteses</li>
+</ul>
+</p>
+
+<h4>Estatística computacional</h4>
+<p align="justify">
+<ul>
+<li>Simulação Monte Carlo (SMC)</li>
+<li>SMC para estimação</li>
+<li>SMC para teste de hipóteses</li>
 <li>Bootstrap</li>
 <li>Validação cruzada</li>
 <li>Métodos MCMC</li>
 <li>Redes neurais artificiais (RNAs)</li>
-<li>O perceptron</li>
-<li>RNAs multicamadas</li>
 <li>RNAs para regressão</li>
 <li>RNAs para classificação</li>
 <li>Agrupamento de dados</li>
+</ul>
+</p>
+
+<h4>Cálculo numérico</h4>
+<p align="justify">
+<ul>
 <li>Raízes de funções reais</li>
 <li>Soluções de sistemas lineares</li>
 <li>Soluções de sistemas não lineares</li>
 <li>Diferenciação numérica</li>
 <li>Integração numérica</li>
 <li>Otimização numérica</li>
-</ol>
+<li><a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>
+</ul>
 </p>
 
-<h3 id="C">Outros links</h3>
+<h4>Outros links</h4>
 <p align="justify">
-<ul>
-<li><a href="https://miktex.org/" target="_blank">MiKTeX</a></li>
-<li><a href="https://www.xm1math.net/texmaker/" target="_blank">TeXMaker</a></li>
+<ol start="1">
+<li><a href="html/otrabs.html" target="_blank">Orientações para trabalhos</a></li>
+<li><a href="pdf/ec.pdf" target="_blank">Latex/Template | PDF</a></li>
+<li><a href="pdf/ectxt.pdf" target="_blank">Latex/Template | TEX</a></li>
+<li><a href="https://en.wikibooks.org/wiki/LaTeX" target="_blank">Latex</a></li>
 <li><a href="https://en.wikibooks.org/wiki/LaTeX/Mathematics" target="_blank">Latex/Matemática | parte I</a></li>
 <li><a href="https://en.wikibooks.org/wiki/LaTeX/Advanced_Mathematics" target="_blank">Latex/Matemática | parte II</a></li>
 <li><a href="https://en.wikibooks.org/wiki/LaTeX/Tables" target="_blank">Latex/Tabelas</a></li>
 <li><a href="http://merkel.texture.rocks/Latex/natbib.php" target="_blank">Latex/natbib</a></li>
 <li><a href="https://www.r-project.org/" target="_blank">The R Project</a></li>
+<li><a href="https://miktex.org/" target="_blank">MiKTeX</a></li>
+<li><a href="https://www.xm1math.net/texmaker/" target="_blank">TeXMaker</a></li>
 <li><a href="https://rstudio.com/" target="_blank">RStudio</a></li>
-<li><a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>
-<li><a href="https://www.vfu.bg/en/e-Learning/Math--Bertsekas_Tsitsiklis_Introduction_to_probability.pdf" target="_blank">EBook</a></li>
-<li><a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm" target="_blank">MIT</a></li>
-</ul>
+</ol>
 </p>
 
 </body>
