--- a/html/th1R.html
+++ b/html/th1R.html
@@ -431,8 +431,7 @@ versus <span class="math inline">\(H_{1}:\mu&lt;25\hspace{0.2cm}\mbox{min}\)</sp
 Apresente uma estimativa intervalar para o tempo médio de entrega com
 confiança de 95%.
 </p>
-<pre class="r"><code>require(TeachingDemos)
-## Loading required package: TeachingDemos
+<pre class="r"><code>library(TeachingDemos)
 dados &lt;- c(4.24,9.94,11.31,11.84,13.89,19.97,21.18,22.15,
            22.44,24.69,25.20,25.36,25.62,26.96,27.25,27.42,
            29.98,32.54,32.98,34.88,35.34,35.44,35.57,36.29,
@@ -802,7 +801,7 @@ hipótese que o tempo médio entre duas emissões sucessivas é igual a 1.
 Se a hipótese nula for rejeitada, apresente uma estimativa intervalar
 para o tempo médio entre duas emissões sucessivas com confiança de 95%.
 </p>
-<pre class="r"><code>require(TeachingDemos)
+<pre class="r"><code>library(TeachingDemos)
 dados &lt;- c(0.02,0.04,0.05,0.07,0.07,0.09,0.09,0.10,0.12,
            0.22,0.28,0.34,0.34,0.35,0.36,0.43,0.43,0.46,
            0.61,0.62,0.74,0.80,0.81,0.85,0.90,0.93,1.02,
