--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
 <!-- Comentário -->
 
 <h3>Tópicos</h3>
+<h4>Estatística descritiva e R</h4>
+<p align="justify">
+<ul>
+<li><font color="red">&bull;</font> <a href="html/ed.html" target="_blank">Estatística descritiva</a></li>
+<li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>
+<li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
+<li><a href="pdf/csbaseR.pdf" target="_blank">Base R cheat sheet</a></li>
+<li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
+<li><a href="https://www.statmethods.net/index.html" target="_blank">Quick-R by DataCamp</a></li>
+<li><a href="https://www.tutorialspoint.com/r/index.htm" target="_blank">R Tutorial</a></li>
+</ul>
+</p>
+
 <h4>Probabilidade e simulação</h4>
 <p align="justify">
 <ul>
@@ -30,24 +43,11 @@
 <li><a href="html/svad.html" target="_blank">Simulação de va's discretas</a></li>
 <li><a href="html/svac.html" target="_blank">Simulação de va's contínuas</a></li>
 <li><a href="html/snmv.html" target="_blank">Simulação da normal multivariada</a></li>
+<li><a href="https://www.vfu.bg/en/e-Learning/Math--Bertsekas_Tsitsiklis_Introduction_to_probability.pdf" target="_blank">EBook</a></li>
+<li><a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm" target="_blank">MIT</a></li>
 <li>O processo de Bernoulli</li>
 <li>O processo de Poisson</li>
 <li>Cadeias de Markov</li>
-<li><a href="https://www.vfu.bg/en/e-Learning/Math--Bertsekas_Tsitsiklis_Introduction_to_probability.pdf" target="_blank">EBook</a></li>
-<li><a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm" target="_blank">MIT</a></li>
-</ul>
-</p>
-
-<h4>Estatística descritiva e R</h4>
-<p align="justify">
-<ul>
-<li><font color="red">&bull;</font> <a href="html/ed.html" target="_blank">Estatística descritiva</a></li>
-<li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
-<li><a href="pdf/csbaseR.pdf" target="_blank">Base R cheat sheet</a></li>
-<li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
-<li><a href="https://www.statmethods.net/index.html" target="_blank">Quick-R by DataCamp</a></li>
-<li><a href="https://www.tutorialspoint.com/r/index.htm" target="_blank">R Tutorial</a></li>  
-<li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>
 </ul>
 </p>
 
@@ -58,7 +58,7 @@
 <li>Estimação com R</li>
 <li><a href="html/th1R.html" target="_blank">Teste de hipóteses com R</a> (I)</li>
 <li>Teste de hipóteses com R (II)</li>
-<li>Teste de hipóteses com R (III)</li>
+<li><a href="html/th3R.html" target="_blank">Teste de hipóteses com R</a> (III)</li>
 <li>ANOVA com 1 fator</li>
 <li>Correlação linear de Pearson</li>
 <li>Regressão linear simples</li>
@@ -106,9 +106,9 @@
 <li><a href="https://en.wikibooks.org/wiki/LaTeX/Advanced_Mathematics" target="_blank">Latex/Matemática | parte II</a></li>
 <li><a href="https://en.wikibooks.org/wiki/LaTeX/Tables" target="_blank">Latex/Tabelas</a></li>
 <li><a href="http://merkel.texture.rocks/Latex/natbib.php" target="_blank">Latex/natbib</a></li>
-<li><a href="https://www.r-project.org/" target="_blank">The R Project</a></li>
 <li><a href="https://miktex.org/" target="_blank">MiKTeX</a></li>
 <li><a href="https://www.xm1math.net/texmaker/" target="_blank">TeXMaker</a></li>
+<li><a href="https://www.r-project.org/" target="_blank">The R Project</a></li>
 <li><a href="https://rstudio.com/" target="_blank">RStudio</a></li>
 </ol>
 </p>
