--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <h3>Tópicos</h3>
 <h4>Estatística descritiva e R</h4>
 <p align="justify">
-<ul>
+<ol start="1">
 <li><font color="red">&bull;</font> <a href="html/ed.html" target="_blank">Estatística descritiva</a></li>
 <li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>
 <li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
@@ -30,45 +30,47 @@
 <li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
 <li><a href="https://www.statmethods.net/index.html" target="_blank">Quick-R by DataCamp</a></li>
 <li><a href="https://www.tutorialspoint.com/r/index.htm" target="_blank">R Tutorial</a></li>
-</ul>
+<li><a href="https://www.r-project.org/" target="_blank">The R Project</a></li>
+<li><a href="https://rstudio.com/" target="_blank">RStudio</a></li>
+</ol>
 </p>
 
 <h4>Probabilidade e simulação</h4>
 <p align="justify">
-<ul>
+<ol start="1">
 <li><font color="red">&bull;</font> <a href="html/prob.html" target="_blank">Probabilidade</a></li>  
-<li>Lei dos grandes números</li>
-<li>Teorema central do limite</li>
 <li><a href="html/sna.html" target="_blank">Simulação de números aleatórios</a></li>
 <li><a href="html/svad.html" target="_blank">Simulação de va's discretas</a></li>
 <li><a href="html/svac.html" target="_blank">Simulação de va's contínuas</a></li>
 <li><a href="html/snmv.html" target="_blank">Simulação da normal multivariada</a></li>
 <li><a href="https://www.vfu.bg/en/e-Learning/Math--Bertsekas_Tsitsiklis_Introduction_to_probability.pdf" target="_blank">EBook</a></li>
 <li><a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm" target="_blank">MIT</a></li>
-<li>O processo de Bernoulli</li>
-<li>O processo de Poisson</li>
-<li>Cadeias de Markov</li>
-</ul>
+<li>Lei dos grandes números</li>
+<li>Teorema central do limite</li>
+<li>Processos de Bernoulli</li>
+<li>Processos de Poisson</li>
+<li>Cadeias de Markov finitas</li>
+</ol>
 </p>
 
 <h4>Estatística inferencial</h4>
 <p align="justify">
-<ul>
+<ol start="1">
 <li><font color="red">&bull;</font> <a href="html/estb.html" target="_blank">Estatística inferencial</a></li>  
 <li>Estimação com R</li>
-<li><a href="html/th1R.html" target="_blank">Teste de hipóteses com R</a> (I)</li>
-<li>Teste de hipóteses com R (II)</li>
-<li><a href="html/th3R.html" target="_blank">Teste de hipóteses com R</a> (III)</li>
+<li>1. <a href="html/th1R.html" target="_blank">Teste de hipóteses com R</a></li>
+<li>2. Teste de hipóteses com R (II)</li>
+<li>3. <a href="html/th3R.html" target="_blank">Teste de hipóteses com R</a></li>
 <li>ANOVA com 1 fator</li>
 <li>Correlação linear de Pearson</li>
 <li>Regressão linear simples</li>
 <li>Regressão linear múltipla</li>
-</ul>
+</ol>
 </p>
 
 <h4>Estatística computacional</h4>
 <p align="justify">
-<ul>
+<ol start="1">
 <li>Simulação Monte Carlo (SMC)</li>
 <li>SMC para estimação</li>
 <li>SMC para teste de hipóteses</li>
@@ -79,12 +81,12 @@
 <li>RNAs para regressão</li>
 <li>RNAs para classificação</li>
 <li>Agrupamento de dados</li>
-</ul>
+</ol>
 </p>
 
 <h4>Cálculo numérico</h4>
 <p align="justify">
-<ul>
+<ol start="1">
 <li>Raízes de funções reais</li>
 <li>Soluções de sistemas lineares</li>
 <li>Soluções de sistemas não lineares</li>
@@ -92,7 +94,7 @@
 <li>Integração numérica</li>
 <li>Otimização numérica</li>
 <li><a href="https://cran.r-project.org/web/views/NumericalMathematics.html"  target="_blank">Cálculo numérico com R</a></li>
-</ul>
+</ol>
 </p>
 
 <h4>Outros links</h4>
@@ -108,8 +110,6 @@
 <li><a href="http://merkel.texture.rocks/Latex/natbib.php" target="_blank">Latex/natbib</a></li>
 <li><a href="https://miktex.org/" target="_blank">MiKTeX</a></li>
 <li><a href="https://www.xm1math.net/texmaker/" target="_blank">TeXMaker</a></li>
-<li><a href="https://www.r-project.org/" target="_blank">The R Project</a></li>
-<li><a href="https://rstudio.com/" target="_blank">RStudio</a></li>
 </ol>
 </p>
 
