--- a/html/th1R.html
+++ b/html/th1R.html
@@ -404,6 +404,8 @@ Wilcoxon para a mediana populacional: teste não-paramétrico</a></li>
 <ul>
 <li>P. Morettin &amp; W. Bussab. Estatística Básica. 6a ed. São Paulo:
 Saraiva, 2010.</li>
+<li>M. Magalhães &amp; AC. Lima. Noções de Probabolidade e Estatística
+Básica. 5a ed. São Paulo: EDUSP, 2002.</li>
 <li>M. Campos. Introdução ao R. Vitória, 2018. Disponível em: <a href="https://maurocmcampos.github.io/ec/html/intror.html">https://maurocmcampos.github.io/ec/html/intror.html</a>.</li>
 <li>M. Campos. Funções do R para estatística descritiva. Vitória, 2023.
 Disponível em: <a href="https://maurocmcampos.github.io/ec/html/edR.html">https://maurocmcampos.github.io/ec/html/edR.html</a>.</li>
