--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <li><font color="red">&bull;</font> <a href="html/estb.html" target="_blank">Estatística inferencial</a></li>  
 <li>Estimação com R</li>
 <li>1. <a href="html/th1R.html" target="_blank">Teste de hipóteses com R</a></li>
-<li>2. Teste de hipóteses com R (II)</li>
+<li>2. Teste de hipóteses com R</li>
 <li>3. <a href="html/th3R.html" target="_blank">Teste de hipóteses com R</a></li>
 <li>ANOVA com 1 fator</li>
 <li>Correlação linear de Pearson</li>
