--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <li>1. <a href="html/th1R.html" target="_blank">Teste de hipóteses com R</a></li>
 <li>2. Teste de hipóteses com R</li>
 <li>3. <a href="html/th3R.html" target="_blank">Teste de hipóteses com R</a></li>
-<li>ANOVA com 1 fator</li>
+<li><a href="html/anova1fR.html" target="_blank">ANOVA com 1 fator</a></li>
 <li>Correlação linear de Pearson</li>
 <li>Regressão linear simples</li>
 <li>Regressão linear múltipla</li>
@@ -71,9 +71,7 @@
 <h4>Estatística computacional</h4>
 <p align="justify">
 <ol start="1">
-<li>Simulação Monte Carlo (SMC)</li>
-<li>SMC para estimação</li>
-<li>SMC para teste de hipóteses</li>
+<li>Simulação Monte Carlo</li>
 <li>Bootstrap</li>
 <li>Validação cruzada</li>
 <li>Métodos MCMC</li>
