--- a/html/prob.html
+++ b/html/prob.html
@@ -28,21 +28,17 @@
 </ul>
 <li>Variáveis aleatórias (Vaas)</li>
 <ul>
-<li>Definição</li>
+<li>Vaas unidimensionais: definição</li>
 <li>Função de distribuição acumulada</li>
-<li>Distribuição de uma vaa</li>
 <li>Vaas discretas</li>
 <li>Vaas contínuas</li>
-<li>Funções de uma vaa</li>  
-</ul>
-<li>Vetores aleatórios (Veas)</li>
-<ul>
-<li>Veas bidimensionais: definição</li>
-<li>Veas bidimensionais discretos</li>
-<li>Veas bidimensionais contínuos</li>
-<li>Vetores aleatórios multidimensionais</li>
-<li>Variáveis aleatórias independentes</li>
-<li>Funções de um vea</li>
+<li>Distribuição de uma vaa</li>
+<li>Vaas bidimensionais: definição</li>
+<li>Vaas bidimensionais discretos</li>
+<li>Vaas bidimensionais contínuos</li>
+<li>Vaas multidimensionais</li>
+<li>Vaas independentes</li>
+<li>Funções de vaas</li>
 </ul>
 <li>Momentos</li>
 <ul>
