--- a/html/prob.html
+++ b/html/prob.html
@@ -29,13 +29,13 @@
 <li>Variáveis aleatórias (Vaas)</li>
 <ul>
 <li>Vaas unidimensionais: definição</li>
-<li>Função de distribuição acumulada</li>
+<li>Função de distribuição de uma vaa</li>
 <li>Vaas discretas</li>
 <li>Vaas contínuas</li>
 <li>Distribuição de uma vaa</li>
 <li>Vaas bidimensionais: definição</li>
-<li>Vaas bidimensionais discretos</li>
-<li>Vaas bidimensionais contínuos</li>
+<li>Vaas bidimensionais discretas</li>
+<li>Vaas bidimensionais contínuas</li>
 <li>Vaas multidimensionais</li>
 <li>Vaas independentes</li>
 <li>Funções de vaas</li>
