--- a/html/prob.html
+++ b/html/prob.html
@@ -29,9 +29,9 @@
 <li>Variáveis aleatórias (Vaas)</li>
 <ul>
 <li>Vaas unidimensionais: definição</li>
-<li>Função de distribuição de uma vaa</li>
-<li>Vaas discretas</li>
-<li>Vaas contínuas</li>
+<li>Função de distribuição acumulada</li>
+<li>Vaas unidimensionais discretas</li>
+<li>Vaas unidimensionais contínuas</li>
 <li>Distribuição de uma vaa</li>
 <li>Vaas bidimensionais: definição</li>
 <li>Vaas bidimensionais discretas</li>
