--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
 <li><font color="red">&bull;</font> <a href="html/ed.html" target="_blank">Estatística descritiva</a></li>
 <li><a href="html/edR.html" target="_blank">Estatística descritiva com R</a></li>
 <li><a href="html/intror.html" target="_blank">Introdução ao R</a></li>
+<ul>
 <li><a href="pdf/csbaseR.pdf" target="_blank">Base R cheat sheet</a></li>
-<li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
+<li><a href="pdf/csrmarkdown.pdf" target="_blank">R markdown cheat sheet</a></li>  
 <li><a href="https://www.statmethods.net/index.html" target="_blank">Quick-R by DataCamp</a></li>
 <li><a href="https://www.tutorialspoint.com/r/index.htm" target="_blank">R Tutorial</a></li>
 <li><a href="https://www.r-project.org/" target="_blank">The R Project</a></li>
 <li><a href="https://rstudio.com/" target="_blank">RStudio</a></li>
+<li><a href="pdf/csrstudio.pdf" target="_blank">RStudio IDE cheat sheet</a></li>
+</ul>
 </ol>
 </p>
 
@@ -43,13 +46,13 @@
 <li><a href="html/svad.html" target="_blank">Simulação de va's discretas</a></li>
 <li><a href="html/svac.html" target="_blank">Simulação de va's contínuas</a></li>
 <li><a href="html/snmv.html" target="_blank">Simulação da normal multivariada</a></li>
-<li><a href="https://www.vfu.bg/en/e-Learning/Math--Bertsekas_Tsitsiklis_Introduction_to_probability.pdf" target="_blank">EBook</a></li>
-<li><a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm" target="_blank">MIT</a></li>
 <li>Lei dos grandes números</li>
 <li>Teorema central do limite</li>
 <li>Processos de Bernoulli</li>
 <li>Processos de Poisson</li>
 <li>Cadeias de Markov finitas</li>
+<li><a href="https://www.vfu.bg/en/e-Learning/Math--Bertsekas_Tsitsiklis_Introduction_to_probability.pdf" target="_blank">EBook</a></li>
+<li><a href="https://ocw.mit.edu/resources/res-6-012-introduction-to-probability-spring-2018/index.htm" target="_blank">MIT</a></li>
 </ol>
 </p>
 
@@ -57,13 +60,20 @@
 <p align="justify">
 <ol start="1">
 <li><font color="red">&bull;</font> <a href="html/estb.html" target="_blank">Estatística inferencial</a></li>  
-<li>Estimação com R</li>
-<li>1. <a href="html/th1R.html" target="_blank">Teste de hipóteses com R</a></li>
-<li>2. Teste de hipóteses com R</li>
-<li>3. <a href="html/th3R.html" target="_blank">Teste de hipóteses com R</a></li>
-<li><a href="html/anova1fR.html" target="_blank">ANOVA com 1 fator</a></li>
-<li>Correlação linear de Pearson</li>
+<li>Estimação</li>
+<li>Teste de hipóteses</li>
+<ul>
+<li><a href="html/th1R.html" target="_blank">THs com R: parte I</a></li>
+<li>THs com R: parte II</a></li>
+<li><a href="html/th3R.html" target="_blank">THs com R: parte III</a></li>
+</ul>
+<li>ANOVA com 1 fator</li>
+<ul>
+<li>ANOVA</li>
+<li><a href="html/anova1fR.html" target="_blank">ANOVA com R</a></li>
+</ul>
 <li>Regressão linear simples</li>
+<li>Correlação linear de Pearson</li>
 <li>Regressão linear múltipla</li>
 </ol>
 </p>
