--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
 <h4>Probabilidade e simulação</h4>
 <p align="justify">
 <ol start="1">
-<li><font color="red">&bull;</font> <a href="html/prob.html" target="_blank">Probabilidade</a></li>  
+<li><font color="red">&bull;</font> <a href="html/prob.html" target="_blank">Probabilidade</a></li>
+<li>Probabilidade</li>
+<li>Variáveis aleatórias</li>  
 <li><a href="html/sna.html" target="_blank">Simulação de números aleatórios</a></li>
 <li><a href="html/svad.html" target="_blank">Simulação de va's discretas</a></li>
-<li><a href="html/svac.html" target="_blank">Simulação de va's contínuas</a></li>
+<l<li>Lei dos grandes números</li>
+<li>Teorema central do limite</li>i><a href="html
+/svac.html" target="_blank">Simulação de va's contínuas</a></li>
 <li><a href="html/snmv.html" target="_blank">Simulação da normal multivariada</a></li>
 <li>Lei dos grandes números</li>
 <li>Teorema central do limite</li>
@@ -72,7 +76,7 @@
 <li><a href="html/anova1fR.html" target="_blank">ANOVA com R</a></li>
 </ul>
 <li>Regressão linear simples</li>
-<li>Correlação linear de Pearson</li>
+<li>Correlação</li>
 <li>Regressão linear múltipla</li>
 </ol>
 </p>
