--- a/index.html
+++ b/index.html
@@ -43,12 +43,10 @@
 <ol start="1">
 <li><font color="red">&bull;</font> <a href="html/prob.html" target="_blank">Probabilidade</a></li>
 <li>Probabilidade</li>
-<li>Variáveis aleatórias</li>  
+<li>Variáveis aleatórias (Vaa's)</li>  
 <li><a href="html/sna.html" target="_blank">Simulação de números aleatórios</a></li>
-<li><a href="html/svad.html" target="_blank">Simulação de va's discretas</a></li>
-<l<li>Lei dos grandes números</li>
-<li>Teorema central do limite</li>i><a href="html
-/svac.html" target="_blank">Simulação de va's contínuas</a></li>
+<li><a href="html/svad.html" target="_blank">Simulação de vaa's discretas</a></li>
+<li><a href="html/svac.html" target="_blank">Simulação de vaa's contínuas</a></li>
 <li><a href="html/snmv.html" target="_blank">Simulação da normal multivariada</a></li>
 <li>Lei dos grandes números</li>
 <li>Teorema central do limite</li>
