--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <ol start="1">
 <li><font color="red">&bull;</font> <a href="html/prob.html" target="_blank">Probabilidade</a></li>
 <li>Probabilidade</li>
-<li>Variáveis aleatórias (Vaa's)</li>  
+<li>Variáveis aleatórias</li>  
 <li><a href="html/sna.html" target="_blank">Simulação de números aleatórios</a></li>
 <li><a href="html/svad.html" target="_blank">Simulação de vaa's discretas</a></li>
 <li><a href="html/svac.html" target="_blank">Simulação de vaa's contínuas</a></li>
@@ -62,6 +62,11 @@
 <p align="justify">
 <ol start="1">
 <li><font color="red">&bull;</font> <a href="html/estb.html" target="_blank">Estatística inferencial</a></li>  
+<li>Estatística inferencial: uma população</li>
+<ul>
+<li><a href="html/introestinf.html" target="_blank">EstInf: grandes amostras</a></li>
+<li>EstInf: população normal</li>  
+</ul>  
 <li>Estimação</li>
 <li>Teste de hipóteses</li>
 <ul>
