--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 <p align="justify">
 <ol start="1">
 <li><font color="red">&bull;</font> <a href="html/estb.html" target="_blank">Estatística inferencial</a></li>  
-<li>Estatística inferencial: uma população</li>
+<li>Inferência: uma população</li>
 <ul>
-<li><a href="html/introestinf.html" target="_blank">EstInf: grandes amostras</a></li>
-<li>EstInf: população normal</li>  
+<li><a href="html/introestinf.html" target="_blank">Inferência: grandes amostras</a></li>
+<li>Inferência: população normal</li>  
 </ul>  
 <li>Estimação</li>
 <li>Teste de hipóteses</li>
