--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
 <li><font color="red">&bull;</font> <a href="html/estb.html" target="_blank">Estatística inferencial</a></li>  
 <li>Inferência: uma população</li>
 <ul>
-<li><a href="html/introestinf.html" target="_blank">Inferência: grandes amostras</a></li>
+<li><a href="html/introestinf.html" target="_blank">Inferência:</a> grandes amostras</li>
 <li>Inferência: população normal</li>  
 </ul>  
 <li>Estimação</li>
 <li>Teste de hipóteses</li>
 <ul>
-<li><a href="html/th1R.html" target="_blank">THs com R: parte I</a></li>
+<li><a href="html/th1R.html" target="_blank">THs com R:</a> parte I</li>
 <li>THs com R: parte II</a></li>
-<li><a href="html/th3R.html" target="_blank">THs com R: parte III</a></li>
+<li><a href="html/th3R.html" target="_blank">THs com R:</a> parte III</li>
 </ul>
 <li>ANOVA com 1 fator</li>
 <ul>
