--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <li><font color="red">&bull;</font> <a href="html/estb.html" target="_blank">Estatística inferencial</a></li>  
 <li>Inferência: uma população</li>
 <ul>
-<li><a href="html/introestinf.html" target="_blank">Inferência:</a> grandes amostras</li>
+<li><a href="html/introestinf01.html" target="_blank">Inferência:</a> grandes amostras</li>
 <li>Inferência: população normal</li>  
 </ul>  
 <li>Estimação</li>
