--- a/index.html
+++ b/index.html
@@ -74,10 +74,7 @@
 <li>THs com R: parte II</a></li>
 <li><a href="html/th3R.html" target="_blank">THs com R:</a> parte III</li>
 </ul>
-<li>ANOVA com 1 fator</li>
-<ul>
-<li><a href="html/anova1fR.html" target="_blank">ANOVA com R</a></li>
-</ul>
+<li><a href="html/anova1fR.html" target="_blank">ANOVA</a> com 1 fator</li>
 <li>Regressão linear simples</li>
 <li>Correlação</li>
 <li>Regressão linear múltipla</li>
